--- a/style.css
+++ b/style.css
@@ -1,27 +1,48 @@
 html {
     font-size: 10px;
     background-color: black;
-    /* background: url('background.jpg') bottom center;
-    background-size: cover; */
+}
+
+body{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.main{
+    display:flex;
+    flex-direction: column;
+    flex:1;
+    align-items: center;
+    justify-content: space-around;
+}
+
+footer{
+    color: white;
+    text-align: center;
+}
+
+.title{
+    color: white;
+    font-size: 50px;
+    text-align: center;
 }
 
 .choices{
     display: flex;
-    flex:1;
-    min-height: 100vh;
     align-items: center;
     justify-content: center;
     gap: 10px;
 }
 
 button{
-    padding: 50px;
+    padding: 0;
     font-size: 25px;
 }
 
 .result, .currentScore{
     font-size: 35px;
-    color: blue;
+    color: grey;
     text-align: center;
 }
 
@@ -31,9 +52,20 @@ button{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 25px;
 }
 
 .announcement{
     font-size: 50px;
-    color: blue;
+    color: grey;
+}
+
+img{
+    padding: 0;
+    width: 200px;
+    height: 200px;
+}
+
+.playAgain{
+    padding: 50px;
 }
